syntax = "proto3";

option csharp_namespace = "Server";

package matriculas;

service Matriculas {
  rpc GetMatricula (Camera) returns (stream DadosMatricula);
}

// The request message
message Camera {
	bool cameraEntrada = 1;
}

// The response message
message DadosMatricula {
  string matricula = 1;
  bytes foto = 2;
  int32 blockSize = 3;
}
